tests/snapshots/unit_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
unit_value=&
unit_struct=&
optional_unit=&
vec_of_units%5B0%5D=&
vec_of_units%5B1%5D=&
vec_of_units%5B2%5D=&
tuple_with_unit%5B0%5D=test&
tuple_with_unit%5B1%5D=&
tuple_with_unit%5B2%5D=42
