tests/snapshots/unit_types-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
unit_value=&
unit_struct=&
optional_unit&
vec_of_units=&
tuple_with_unit%5B0%5D=empty&
tuple_with_unit%5B1%5D=&
tuple_with_unit%5B2%5D=0
