tests/snapshots/unit_types.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
unit_value&
unit_struct&
optional_unit&
vec_of_units[0]&
vec_of_units[1]&
vec_of_units[2]&
tuple_with_unit[0]=test&
tuple_with_unit[1]&
tuple_with_unit[2]=42
