tests/snapshots/unit_types@form.snap
---
source: tests/test_roundtrip.rs
description: "ContainsUnits { unit_value: (), unit_struct: UnitStruct, optional_unit: Some(()), vec_of_units: [UnitStruct, UnitStruct, UnitStruct], tuple_with_unit: (\"test\", (), 42) }"
---
unit_value=&
unit_struct=&
optional_unit=&
vec_of_units%5B0%5D=&
vec_of_units%5B1%5D=&
vec_of_units%5B2%5D=&
tuple_with_unit%5B0%5D=test&
tuple_with_unit%5B1%5D=&
tuple_with_unit%5B2%5D=42
