tests/snapshots/unit_types@query-2.snap
---
source: tests/test_roundtrip.rs
description: "ContainsUnits { unit_value: (), unit_struct: UnitStruct, optional_unit: None, vec_of_units: [], tuple_with_unit: (\"empty\", (), 0) }"
---
unit_value=&
unit_struct=&
optional_unit&
vec_of_units=&
tuple_with_unit[0]=empty&
tuple_with_unit[1]=&
tuple_with_unit[2]=0
